--- a/.env.example
+++ b/.env.example
@@ -6,11 +6,11 @@ SERVER_PORT=
 
 
 # DB
-DB_HOST=
+DB_HOST=localhost
 DB_PORT=3306
 DB_NAME=queroedu
-DB_USER=
-DB_PASS=
+DB_USER=root
+DB_PASS=root
 
 
 
